src/libdrakvuf/libdrakvuf.h

typedef struct process_data
{
    const char* name;   /* Process name */
    vmi_pid_t pid ;     /* Process pid */
    vmi_pid_t ppid ;    /* Process parent pid */
    addr_t base_addr ;  /* Process base address */
    int64_t userid ;    /* Process SessionID/UID */
    uint32_t tid ;      /* Thread Id for Linux & Windows*/
    proc_type_t bitness;/* Process bitness 32/64 */
} proc_data_t ;
typedef struct drakvuf* drakvuf_t;
typedef struct drakvuf_trap drakvuf_trap_t;
typedef struct drakvuf_trap_info
{
    gint64 timestamp;
    unsigned int vcpu;
    uint16_t altp2m_idx;
    proc_data_t proc_data ; /* Current owning process data */
    proc_data_t attached_proc_data ; /* Current attached process data */
    addr_t trap_pa;
    x86_registers_t* regs;
    drakvuf_trap_t* trap;
    uint64_t event_uid; /* Unique sequential event identifier */
    union
    {
        const cpuid_event_t* cpuid; /* For CPUID traps */
        const debug_event_t* debug; /* For DEBUG traps */
        const reg_event_t*   reg;   /* For MSR traps */
        const io_event_t*    io;    /* For I/O traps */
    };
} drakvuf_trap_info_t;
////////////////////////////////////////////////////////////////////////////

// IMHO these definitions must be placed within another file, named
// libdrakvuf-windows.h or something similar

// For get_previous_mode...
typedef enum privilege_mode
{
    KERNEL_MODE,
    USER_MODE,
    MAXIMUM_MODE
} privilege_mode_t ;
// Confirmed only on Win7 SP1...
typedef enum object_manager_object
{
    OBJ_MANAGER_PROCESS_OBJECT = 7,
    OBJ_MANAGER_THREAD_OBJECT  = 8
} object_manager_object_t ;
// Microsoft PreviousMode KTHREAD explanation:
// https://msdn.microsoft.com/en-us/library/windows/hardware/ff559860(v=vs.85).aspx
bool drakvuf_get_current_thread_previous_mode(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    privilege_mode_t* previous_mode) NOEXCEPT;
bool drakvuf_get_thread_previous_mode(drakvuf_t drakvuf,
    addr_t kthread,
    privilege_mode_t* previous_mode) NOEXCEPT;
bool drakvuf_is_thread(drakvuf_t drakvuf,
    addr_t dtb,
    addr_t thread_addr) NOEXCEPT;
bool drakvuf_is_process(drakvuf_t drakvuf,
    addr_t dtb,
    addr_t process_addr) NOEXCEPT;
bool drakvuf_find_process(drakvuf_t drakvuf,
    vmi_pid_t find_pid,
    const char* find_procname,
    addr_t* process_addr) NOEXCEPT;
typedef struct _module_info
{
    addr_t eprocess_addr ;        /* EPROCESS to which the module is currently loaded           */
    addr_t dtb ;                  /* DTB for the process where the module is currently loaded   */
    vmi_pid_t pid ;               /* PID of the process where the module is currently is loaded */
    addr_t base_addr ;            /* Module base address                                        */
    addr_t size ;                 /* Size of Image                                              */
    unicode_string_t* full_name ; /* Module full name                                           */
    unicode_string_t* base_name ; /* Module base name                                           */
    bool is_wow ;                 /* Is WoW64 module?                                           */
    bool is_wow_process ;         /* Is WoW64 process?                                          */
} module_info_t ;
bool drakvuf_enumerate_processes(drakvuf_t drakvuf,
    void (*visitor_func)(drakvuf_t drakvuf, addr_t process, void* visitor_ctx),
    void* visitor_ctx) NOEXCEPT;
bool drakvuf_enumerate_processes_with_module(drakvuf_t drakvuf,
    const char* module_name,
    bool (*visitor_func)(drakvuf_t drakvuf, const module_info_t* module_info, void* visitor_ctx),
    void* visitor_ctx) NOEXCEPT;
bool drakvuf_is_crashreporter(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    vmi_pid_t* pid) NOEXCEPT;
bool drakvuf_get_module_list(drakvuf_t drakvuf,
    addr_t process_base,
    addr_t* module_list) NOEXCEPT;
bool drakvuf_get_module_list_wow(drakvuf_t drakvuf,
    access_context_t* ctx,
    addr_t wow_peb,
    addr_t* module_list) NOEXCEPT;
// ObReferenceObjectByHandle
bool drakvuf_obj_ref_by_handle(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    addr_t current_process,
    addr_t handle,
    object_manager_object_t obj_type_arg,
    addr_t* obj_body_addr) NOEXCEPT;
char* drakvuf_read_ascii_str(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t addr) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode_common(drakvuf_t drakvuf, const access_context_t* ctx) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t addr) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode_va(drakvuf_t drakvuf, addr_t vaddr, vmi_pid_t pid) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode32_common(drakvuf_t drakvuf, const access_context_t* ctx) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode32(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t addr) NOEXCEPT;
unicode_string_t* drakvuf_read_unicode32_va(drakvuf_t drakvuf, addr_t vaddr, vmi_pid_t pid) NOEXCEPT;
bool drakvuf_get_module_base_addr( drakvuf_t drakvuf,
    addr_t module_list_head,
    const char* module_name,
    addr_t* base_addr ) NOEXCEPT;
bool drakvuf_get_module_base_addr_ctx( drakvuf_t drakvuf,
    addr_t module_list_head,
    access_context_t* ctx,
    const char* module_name,
    addr_t* base_addr_out ) NOEXCEPT;
bool drakvuf_get_process_ppid(drakvuf_t drakvuf,
    addr_t process_base,
    vmi_pid_t* ppid ) NOEXCEPT;
gchar* drakvuf_reg_keyhandle_path(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    uint64_t key_handle) NOEXCEPT;
char* drakvuf_get_filename_from_handle( drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    addr_t handle ) NOEXCEPT;
// Reads 'length' characters from array of UTF_16 charachters into unicode_string_t object with UTF_8 encoding
unicode_string_t* drakvuf_read_wchar_array(drakvuf_t drakvuf, const access_context_t* ctx, size_t length) NOEXCEPT;
// Determines length of null-terminated array of UTF_16 charachters
size_t drakvuf_wchar_string_length(drakvuf_t drakvuf, const access_context_t* ctx) NOEXCEPT;
// Reads null-terminated string of UTF_16 charachters, automatically determining length, into unicode_string_t object with UTF_8 encoding
unicode_string_t* drakvuf_read_wchar_string(drakvuf_t drakvuf, const access_context_t* ctx) NOEXCEPT;
// Returns JSON-compliant copy of input string. User must free the result.
gchar* drakvuf_escape_str(const char* input) NOEXCEPT;
bool drakvuf_is_wow64(drakvuf_t drakvuf, drakvuf_trap_info_t* info) NOEXCEPT;
addr_t drakvuf_get_function_argument(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    int argument_number) NOEXCEPT;
bool drakvuf_get_pid_from_handle(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t handle, vmi_pid_t* pid) NOEXCEPT;
bool drakvuf_get_tid_from_handle(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t handle, uint32_t* tid) NOEXCEPT;