src/librepl/libdrakvuf.py


# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 484
if _libs["repl"].has("drakvuf_get_current_thread_previous_mode", "cdecl"):
    drakvuf_get_current_thread_previous_mode = _libs["repl"].get("drakvuf_get_current_thread_previous_mode", "cdecl")
    drakvuf_get_current_thread_previous_mode.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(privilege_mode_t)]
    drakvuf_get_current_thread_previous_mode.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 488
if _libs["repl"].has("drakvuf_get_thread_previous_mode", "cdecl"):
    drakvuf_get_thread_previous_mode = _libs["repl"].get("drakvuf_get_thread_previous_mode", "cdecl")
    drakvuf_get_thread_previous_mode.argtypes = [drakvuf_t, addr_t, POINTER(privilege_mode_t)]
    drakvuf_get_thread_previous_mode.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 492
if _libs["repl"].has("drakvuf_is_thread", "cdecl"):
    drakvuf_is_thread = _libs["repl"].get("drakvuf_is_thread", "cdecl")
    drakvuf_is_thread.argtypes = [drakvuf_t, addr_t, addr_t]
    drakvuf_is_thread.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 496
if _libs["repl"].has("drakvuf_is_process", "cdecl"):
    drakvuf_is_process = _libs["repl"].get("drakvuf_is_process", "cdecl")
    drakvuf_is_process.argtypes = [drakvuf_t, addr_t, addr_t]
    drakvuf_is_process.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 500
if _libs["repl"].has("drakvuf_find_process", "cdecl"):
    drakvuf_find_process = _libs["repl"].get("drakvuf_find_process", "cdecl")
    drakvuf_find_process.argtypes = [drakvuf_t, vmi_pid_t, String, POINTER(addr_t)]
    drakvuf_find_process.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 515
class struct__module_info(Structure):
    pass

struct__module_info.__slots__ = [
    'eprocess_addr',
    'dtb',
    'pid',
    'base_addr',
    'full_name',
    'base_name',
    'is_wow',
    'is_wow_process',
]
struct__module_info._fields_ = [
    ('eprocess_addr', addr_t),
    ('dtb', addr_t),
    ('pid', vmi_pid_t),
    ('base_addr', addr_t),
    ('full_name', POINTER(unicode_string_t)),
    ('base_name', POINTER(unicode_string_t)),
    ('is_wow', c_bool),
    ('is_wow_process', c_bool),
]

module_info_t = struct__module_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 515

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 517
if _libs["repl"].has("drakvuf_enumerate_processes", "cdecl"):
    drakvuf_enumerate_processes = _libs["repl"].get("drakvuf_enumerate_processes", "cdecl")
    drakvuf_enumerate_processes.argtypes = [drakvuf_t, CFUNCTYPE(UNCHECKED(None), drakvuf_t, addr_t, POINTER(None)), POINTER(None)]
    drakvuf_enumerate_processes.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 521
if _libs["repl"].has("drakvuf_enumerate_processes_with_module", "cdecl"):
    drakvuf_enumerate_processes_with_module = _libs["repl"].get("drakvuf_enumerate_processes_with_module", "cdecl")
    drakvuf_enumerate_processes_with_module.argtypes = [drakvuf_t, String, CFUNCTYPE(UNCHECKED(c_bool), drakvuf_t, POINTER(module_info_t), POINTER(None)), POINTER(None)]
    drakvuf_enumerate_processes_with_module.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 526
if _libs["repl"].has("drakvuf_is_crashreporter", "cdecl"):
    drakvuf_is_crashreporter = _libs["repl"].get("drakvuf_is_crashreporter", "cdecl")
    drakvuf_is_crashreporter.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(vmi_pid_t)]
    drakvuf_is_crashreporter.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 530
if _libs["repl"].has("drakvuf_get_module_list", "cdecl"):
    drakvuf_get_module_list = _libs["repl"].get("drakvuf_get_module_list", "cdecl")
    drakvuf_get_module_list.argtypes = [drakvuf_t, addr_t, POINTER(addr_t)]
    drakvuf_get_module_list.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 534
if _libs["repl"].has("drakvuf_get_module_list_wow", "cdecl"):
    drakvuf_get_module_list_wow = _libs["repl"].get("drakvuf_get_module_list_wow", "cdecl")
    drakvuf_get_module_list_wow.argtypes = [drakvuf_t, POINTER(access_context_t), addr_t, POINTER(addr_t)]
    drakvuf_get_module_list_wow.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 540
if _libs["repl"].has("drakvuf_obj_ref_by_handle", "cdecl"):
    drakvuf_obj_ref_by_handle = _libs["repl"].get("drakvuf_obj_ref_by_handle", "cdecl")
    drakvuf_obj_ref_by_handle.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t, addr_t, object_manager_object_t, POINTER(addr_t)]
    drakvuf_obj_ref_by_handle.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 548
if _libs["repl"].has("drakvuf_read_ascii_str", "cdecl"):
    drakvuf_read_ascii_str = _libs["repl"].get("drakvuf_read_ascii_str", "cdecl")
    drakvuf_read_ascii_str.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t]
    if sizeof(c_int) == sizeof(c_void_p):
        drakvuf_read_ascii_str.restype = ReturnString
    else:
        drakvuf_read_ascii_str.restype = String
        drakvuf_read_ascii_str.errcheck = ReturnString

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 550
if _libs["repl"].has("drakvuf_read_unicode_common", "cdecl"):
    drakvuf_read_unicode_common = _libs["repl"].get("drakvuf_read_unicode_common", "cdecl")
    drakvuf_read_unicode_common.argtypes = [vmi_instance_t, POINTER(access_context_t)]
    drakvuf_read_unicode_common.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 552
if _libs["repl"].has("drakvuf_read_unicode", "cdecl"):
    drakvuf_read_unicode = _libs["repl"].get("drakvuf_read_unicode", "cdecl")
    drakvuf_read_unicode.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t]
    drakvuf_read_unicode.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 554
if _libs["repl"].has("drakvuf_read_unicode_va", "cdecl"):
    drakvuf_read_unicode_va = _libs["repl"].get("drakvuf_read_unicode_va", "cdecl")
    drakvuf_read_unicode_va.argtypes = [vmi_instance_t, addr_t, vmi_pid_t]
    drakvuf_read_unicode_va.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 556
if _libs["repl"].has("drakvuf_read_unicode32_common", "cdecl"):
    drakvuf_read_unicode32_common = _libs["repl"].get("drakvuf_read_unicode32_common", "cdecl")
    drakvuf_read_unicode32_common.argtypes = [vmi_instance_t, POINTER(access_context_t)]
    drakvuf_read_unicode32_common.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 558
if _libs["repl"].has("drakvuf_read_unicode32", "cdecl"):
    drakvuf_read_unicode32 = _libs["repl"].get("drakvuf_read_unicode32", "cdecl")
    drakvuf_read_unicode32.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t]
    drakvuf_read_unicode32.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 560
if _libs["repl"].has("drakvuf_read_unicode32_va", "cdecl"):
    drakvuf_read_unicode32_va = _libs["repl"].get("drakvuf_read_unicode32_va", "cdecl")
    drakvuf_read_unicode32_va.argtypes = [vmi_instance_t, addr_t, vmi_pid_t]
    drakvuf_read_unicode32_va.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 562
if _libs["repl"].has("drakvuf_get_module_base_addr", "cdecl"):
    drakvuf_get_module_base_addr = _libs["repl"].get("drakvuf_get_module_base_addr", "cdecl")
    drakvuf_get_module_base_addr.argtypes = [drakvuf_t, addr_t, String, POINTER(addr_t)]
    drakvuf_get_module_base_addr.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 567
if _libs["repl"].has("drakvuf_get_module_base_addr_ctx", "cdecl"):
    drakvuf_get_module_base_addr_ctx = _libs["repl"].get("drakvuf_get_module_base_addr_ctx", "cdecl")
    drakvuf_get_module_base_addr_ctx.argtypes = [drakvuf_t, addr_t, POINTER(access_context_t), String, POINTER(addr_t)]
    drakvuf_get_module_base_addr_ctx.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 573
if _libs["repl"].has("drakvuf_get_process_ppid", "cdecl"):
    drakvuf_get_process_ppid = _libs["repl"].get("drakvuf_get_process_ppid", "cdecl")
    drakvuf_get_process_ppid.argtypes = [drakvuf_t, addr_t, POINTER(vmi_pid_t)]
    drakvuf_get_process_ppid.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 577
if _libs["repl"].has("drakvuf_reg_keyhandle_path", "cdecl"):
    drakvuf_reg_keyhandle_path = _libs["repl"].get("drakvuf_reg_keyhandle_path", "cdecl")
    drakvuf_reg_keyhandle_path.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), c_uint64]
    drakvuf_reg_keyhandle_path.restype = POINTER(gchar)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 581
if _libs["repl"].has("drakvuf_get_filename_from_handle", "cdecl"):
    drakvuf_get_filename_from_handle = _libs["repl"].get("drakvuf_get_filename_from_handle", "cdecl")
    drakvuf_get_filename_from_handle.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t]
    if sizeof(c_int) == sizeof(c_void_p):
        drakvuf_get_filename_from_handle.restype = ReturnString
    else:
        drakvuf_get_filename_from_handle.restype = String
        drakvuf_get_filename_from_handle.errcheck = ReturnString

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 586
if _libs["repl"].has("drakvuf_read_wchar_array", "cdecl"):
    drakvuf_read_wchar_array = _libs["repl"].get("drakvuf_read_wchar_array", "cdecl")
    drakvuf_read_wchar_array.argtypes = [vmi_instance_t, POINTER(access_context_t), c_size_t]
    drakvuf_read_wchar_array.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 590
if _libs["repl"].has("drakvuf_wchar_string_length", "cdecl"):
    drakvuf_wchar_string_length = _libs["repl"].get("drakvuf_wchar_string_length", "cdecl")
    drakvuf_wchar_string_length.argtypes = [vmi_instance_t, POINTER(access_context_t)]
    drakvuf_wchar_string_length.restype = c_size_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 593
if _libs["repl"].has("drakvuf_read_wchar_string", "cdecl"):
    drakvuf_read_wchar_string = _libs["repl"].get("drakvuf_read_wchar_string", "cdecl")
    drakvuf_read_wchar_string.argtypes = [vmi_instance_t, POINTER(access_context_t)]
    drakvuf_read_wchar_string.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 596
if _libs["repl"].has("drakvuf_escape_str", "cdecl"):
    drakvuf_escape_str = _libs["repl"].get("drakvuf_escape_str", "cdecl")
    drakvuf_escape_str.argtypes = [String]
    drakvuf_escape_str.restype = POINTER(gchar)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 598
if _libs["repl"].has("drakvuf_is_wow64", "cdecl"):
    drakvuf_is_wow64 = _libs["repl"].get("drakvuf_is_wow64", "cdecl")
    drakvuf_is_wow64.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_is_wow64.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 600
if _libs["repl"].has("drakvuf_get_function_argument", "cdecl"):
    drakvuf_get_function_argument = _libs["repl"].get("drakvuf_get_function_argument", "cdecl")
    drakvuf_get_function_argument.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), c_int]
    drakvuf_get_function_argument.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 604
if _libs["repl"].has("drakvuf_get_pid_from_handle", "cdecl"):
    drakvuf_get_pid_from_handle = _libs["repl"].get("drakvuf_get_pid_from_handle", "cdecl")
    drakvuf_get_pid_from_handle.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t, POINTER(vmi_pid_t)]
    drakvuf_get_pid_from_handle.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 605
if _libs["repl"].has("drakvuf_get_tid_from_handle", "cdecl"):
    drakvuf_get_tid_from_handle = _libs["repl"].get("drakvuf_get_tid_from_handle", "cdecl")
    drakvuf_get_tid_from_handle.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t, POINTER(c_uint32)]
    drakvuf_get_tid_from_handle.restype = c_bool
